# Tea-Engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js  vcpkg.json
.github/workflow/: publish-docs.yml
.github/workflows/: publish-docs.yml
Sandbox/: CMakeLists.txt
Sandbox/assets/models/: plane.glb
Sandbox/assets/shaders/: FaceIndexShader.frag  FlatColorShader.frag  FlatColorShader.vert  TextureShader.frag  TextureShader.vert  VertexColorShader.frag  VertexColorShader.vert  flatColor.vert
Sandbox/src/: Application.cpp  ExampleLayer.cpp  ExampleLayer.h  SandboxApp.cpp
TeaEditor/: CMakeLists.txt  imgui.ini
TeaEditor/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  OutputPanel.cpp  OutputPanel.h  Panel.h  SceneTreePanel.cpp  SceneTreePanel.h
TeaEditor/assets/models/: MissingMesh.glb  sceneTreeImportingTest.glb
TeaEditor/assets/shaders/: DebugLineShader.frag  DebugLineShader.vert  FinalPassShader.frag  FinalPassShader.vert  MissingShader.frag  MissingShader.vert  OldStandardShader.vert  SimpleGridShader.frag  SimpleGridShader.vert  StandardShader.frag  StandardShader.vert  TexCoordsShader.frag  TexCoordsShader.vert  ToneMappingShader.frag
TeaEditor/src/: EditorLayer.cpp  EditorLayer.h  TeaEditorApp.cpp
TeaEngine/: CMakeLists.txt  Tea.h
TeaEngine/include/: Test.h
TeaEngine/include/TeaEngine/: Application.h  Core.h  EntryPoint.h
TeaEngine/src/: Application.cpp  Tea.h  Test.cpp
TeaEngine/src/TeaEngine/: Base.h  Core.h  Log.cpp  Log.h  PrimitiveMesh.cpp  PrimitiveMesh.h
TeaEngine/src/TeaEngine/Core/: Application.cpp  Application.h  Assert.h  Base.h  EntryPoint.h  FileDialog.cpp  FileDialog.h  Input.cpp  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Profiler.cpp  Window.cpp  Window.h
TeaEngine/src/TeaEngine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
TeaEngine/src/TeaEngine/IO/: Resource.h  ResourceLoader.cpp  ResourceLoader.h  ResourceRegistry.cpp  ResourceRegistry.h
TeaEngine/src/TeaEngine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
TeaEngine/src/TeaEngine/Project/: Project.cpp  Project.h
TeaEngine/src/TeaEngine/Renderer/: Buffer.cpp  Buffer.h  Camera.h  DebugRenderer.cpp  DebugRenderer.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  Image.cpp  Image.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
TeaEngine/src/TeaEngine/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneTree.cpp  SceneTree.h
about/: index.html
classes/: index.html
docs/: CMakeLists.txt  Classes.rst  Doxyfile  Doxyfile.in  Input.rst  Layer.rst  Makefile  conf.py  index.rst
docs/about/: index.rst
docs/classes/: Input.rst  Layer.rst  index.rst
docs/getting_started/: index.rst
getting_started/: index.html
